<resources>
    <string name="app_name">Chat_App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username">Username</string>
    <string name="reset">RESET</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="tap_photo_update_profile">Tap photo to update profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="type_a_message">Type a message...</string>
    <string name="press_to_send">Press to send</string>
</resources>